k8s/dev/test.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-depl
  labels:
    app: test-ms
spec:
  replicas: 1
  selector:
    matchLabels: 
     app: test-ms
  template:
    metadata:
      labels:
        app: test-ms
    spec:
      containers:
        - name: test-depl
          image: romanysefen/posts-ms:latest
          ports:
            - containerPort: 80
          resources:         
---
