k8s/dev/comments-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - port: 5001
      targetPort: 5001
