k8s/dev/comments.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: romanysefen/comments-ms:latest
          resources:
---
apiVersion: v1
kind: Service
metadata:
  name: comments-ms
spec:
  selector:
    app: comments
  ports:
    - port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - port: 5001
      targetPort: 5001
