k8s/dev/eventbus.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: romanysefen/eventbus-ms:latest
          resources:

---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-ms
spec:
  selector:
    app: eventbus
  ports:
    - port: 5005
      targetPort: 5005

---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-svc
spec:
  type: NodePort
  selector:
    app: eventbus
  ports:
    - port: 5005
      targetPort: 5005
