k8s/dev/eventbus.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventbus-svc
spec:
  type: NodePort
  selector:
    app: eventbus
  ports:
    - port: 5005
      targetPort: 5005
