k8s/dev/moderation.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: romanysefen/moderation-ms
          resources:


---
apiVersion: v1
kind: Service
metadata:
  name: moderation-ms
spec:
  selector:
    app: moderation
  ports:
    - port: 5003
      targetPort: 5003

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-svc
spec:
  type: NodePort
  selector:
    app: moderation
  ports:
    - port: 5003
      targetPort: 5003
