k8s/dev/posts.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts

  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts
          image: romanysefen/posts-ms:latest
          resources:
---
apiVersion: v1
kind: Service
metadata:
  name: posts-ms
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
      - port: 5000
        targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
