k8s/dev/posts.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
