k8s/dev/query.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - port: 5002
      targetPort: 5002
